--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:portfolio": "webpack --watch --config ./webpack.global.js --env.application=portfolio --env.server=true --env.NODE_ENV=develop --env.title=development",
+    "build:portfolio": "webpack --watch --config ./webpack.global.ts --env.application=portfolio --env.server=true --env.NODE_ENV=develop --env.title=development",
     "local": "node ./app/server.js",
     "server:start": "node ./modules/server/server.js"
   },
@@ -13,16 +13,27 @@
   "license": "ISC",
   "dependencies": {
     "datauri": "^1.0.5",
+    "dom-to-image": "^2.5.2",
     "express": "^4.15.2",
+    "glob": "^7.1.1",
+    "htmlclean": "^3.0.2",
     "jeet": "^7.1.0",
+    "node-sass-importer-builder": "0.0.2",
+    "normalize-scss": "^6.0.0",
     "serve-favicon": "^2.4.2",
+    "svg-url-loader": "^2.0.2",
+    "tinycolor2": "^1.4.1",
+    "toml": "^2.3.2",
+    "typesettings": "^4.0.0",
     "vue": "^2.3.0",
     "yargs": "^7.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.35",
     "@types/node": "^7.0.18",
+    "@types/tinycolor2": "^1.1.1",
     "@types/vue": "^2.0.0",
+    "@types/webpack": "^2.2.15",
     "autoprefixer": "^7.0.0",
     "awesome-typescript-loader": "^3.1.3",
     "cheerio": "^0.22.0",
@@ -31,11 +42,16 @@
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "jeet": "^7.1.0",
     "lerna": "^2.0.0-rc.4",
     "node-sass": "^4.5.2",
+    "node-sass-utils": "^1.1.2",
     "pug": "^2.0.0-rc.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
+    "stylus": "^0.54.5",
+    "svg-inline-loader": "^0.7.1",
+    "toml-loader": "^1.0.0",
     "typescript": "^2.3.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.0",
